<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curriculum_card_background"
        android:paddingBottom="4dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#FFF"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/subtitle_about_me"
                android:textColor="#000"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toTopOf="@+id/top_guidline" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#1AAC7A"
                app:layout_constraintEnd_toEndOf="@+id/titleContainer"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/titleContainer" />

            <TextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/subtitle_age"
                android:textColor="#000"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/about_container" />

            <TextView
                android:id="@+id/age_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/middle_guidline"
                app:layout_constraintTop_toTopOf="@+id/age_label"
                tools:text="Age" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/subtitle_address"
                android:textColor="#000"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/age_label" />


            <TextView
                android:id="@+id/address_line1_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/middle_guidline"
                app:layout_constraintTop_toTopOf="@+id/address_label"
                tools:text="Address line 1" />

            <TextView
                android:id="@+id/address_line2_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/middle_guidline"
                app:layout_constraintTop_toBottomOf="@+id/address_line1_container"
                tools:text="Address line 2 container" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/subtitle_email"
                android:textColor="#000"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/address_line2_container" />


            <TextView
                android:id="@+id/email_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/middle_guidline"
                app:layout_constraintTop_toTopOf="@+id/email_label"
                tools:text="Email@email.com" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/subtitle_phone"
                android:textColor="#000"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/email_container" />

            <TextView
                android:id="@+id/phone_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/middle_guidline"
                app:layout_constraintTop_toTopOf="@+id/phone_label"
                tools:text="+48 731 552 855" />

            <TextView
                android:id="@+id/date_of_birth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/subtitle_dob"
                android:textColor="#000"
                app:layout_constraintBottom_toTopOf="@+id/bottom_guidline"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/phone_container" />

            <TextView
                android:id="@+id/date_of_birth_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/middle_guidline"
                app:layout_constraintTop_toTopOf="@+id/date_of_birth_label"
                tools:text="28.10.1993" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middle_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.30" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <TextView
                android:id="@+id/about_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                app:layout_constraintEnd_toStartOf="@+id/start_guidline"
                app:layout_constraintStart_toStartOf="@+id/end_guidline"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:text="Sample text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

